
2013-June-11 Struan Robertson
	
	* PseudoIsomerizationReaction.cpp: Prior distribution (dissociation
	distribution) calculation method (changes checked in on behalf of Robin).

2013-May-27 Struan Robertson
	
	* PseudoIsomerizationReaction.h/.cpp: Initial revision of pseudo-
	Isomerization reaction class.

2013-May-11 Struan Robertson
	
	* CollisionOperator.cpp, System.cpp, TMatrix.h: Matrix printing 
	generalized and applied to eigenvector matrix.

2013-May-11 Struan Robertson
	
	* CollisionOperator.cpp: Fix for grain number problem (checked-in
	on behalf of Robin).
	* MesmerQA: Baseline update following the above fix.
	* MesmerQA: .xml update following the application of schema.

2013-May-6 Struan Robertson
	
	* UnitTests.cpp/.h: Linear algebra unit tests added.

2013-May-5 Struan Robertson
	
	* MolecularComponents.cpp/.h: Hessian projection method 
	extended to project out transition state modes.

2013-May-4 Chris Morley

	src/System.cpp: From a problem Mark was having: ensure XML
	output is well-formed even when range variable names contain
	unsuitable characters )( : or space, probably arising from a
	molecule name (now deprecated of course).

2013-April-30 Chris Morley

	Update to parse xsi:type me:MesmerILT and similar. Mods like
	required units atribute for pre-exponential etc.

2013-April-30 Chris Morley

	Add MesmerQAschema and examplsSchema directories for
	new(schema-friendly) XML file format versions.

	[Several source files] Make C++ parsing compatible with both old
	and new XML file formats.

	schemas/CMLforMesmer.xsd,mesmer.xsd,mesmerPlugins.xsd, defaults.xml:
	 Update

2013-April-27 Chris Morley

	src/XMLPersist.cpp:fix for corrupted output XML file bug
	introduced in bath gas mod.

2013-April-27 Struan Robertson
	
	* SensitivityAnalysis.cpp: Altered to read covariance matrix.

2013-April-14 Struan Robertson
	
	* System.cpp: Update of version to 3.0.

	* MESMER manual.docx: Updated to include material relating to hessian.
