@@ -1,4 +1,9 @@
 
+2013-June-16 Struan Robertson
+	
+	* PseudoIsomerizationReaction.h/.cpp: Prior fragmentation distribution 
+	corrected for threshold energy and cell-off-set.
+
 2013-June-11 Struan Robertson
 	
 	* PseudoIsomerizationReaction.cpp: Prior distribution (dissociation
